--- a/imagesearch.html
+++ b/imagesearch.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 <style>
     *{
-        padding: 0px;
-        margin: 0px;
+        padding: 0;
+        margin: 0;
         box-sizing: border-box;
     }
     body{
